--- a/projects/ngx-annotate-text/tsconfig.lib.prod.json
+++ b/projects/ngx-annotate-text/tsconfig.lib.prod.json
@@ -2,7 +2,8 @@
 {
   "extends": "./tsconfig.lib.json",
   "compilerOptions": {
-    "declarationMap": false
+    "declarationMap": false,
+    "stripInternal": true,
   },
   "angularCompilerOptions": {
     "enableIvy": false
