--- a/projects/ngx-annotate-text/package.json
+++ b/projects/ngx-annotate-text/package.json
@@ -1,8 +1,9 @@
 {
   "name": "ngx-annotate-text",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "author": "Philipp Perez, (https://philenius.github.io)",
-  "description": "An Angular component library for interactively highlighting / annotating parts of text. ",
+  "license": "MIT",
+  "description": "An Angular component library for interactively highlighting / annotating parts of text.",
   "peerDependencies": {
     "@angular/common": "^10.1.6",
     "@angular/core": "^10.1.6"
