--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,9 @@ jobs:
 
       - name: Run linting tools for npm package
         run: npm run lint ngx-annotate-text
+
+      - name: Run tests
+        run: npm run test ngx-annotate-text --code-coverage
       
       - name: Build Angular demo app
         run: npm run build --prod
