mark "build-and-test" job dependent of "setup" job

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
           node-version: 12.x
 
   build-and-test:
+    needs: setup
     runs-on: ubuntu-latest
     steps:
       - name: Install dependencies
