--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
     branches: [master]
 
 jobs:
-  setup:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Setup repo
@@ -26,10 +26,6 @@ jobs:
         with:
           node-version: 12.x
 
-  build-and-test:
-    needs: setup
-    runs-on: ubuntu-latest
-    steps:
       - name: Install dependencies
         run: npm ci
 
