--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,5 +30,5 @@ jobs:
         uses: JS-DevTools/npm-publish@v1
         with:
           dry-run: true
-          package: ./dist/ngx-annotate-text/
+          package: ./dist/ngx-annotate-text/package.json
           token: ${{ secrets.NPM_TOKEN }}
