upgrade repo to angular 14.2.12

--- a/angular.json
+++ b/angular.json
@@ -152,8 +152,9 @@
       }
     }
   },
-  "defaultProject": "ngx-annotate-text-workspace",
   "cli": {
-    "defaultCollection": "@angular-eslint/schematics"
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   }
 }
