add prettier for formatting code

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
-    "recommendations": [
-        "dbaeumer.vscode-eslint",
-        "Angular.ng-template"
-    ]
+  "recommendations": [
+    "dbaeumer.vscode-eslint",
+    "Angular.ng-template",
+    "esbenp.prettier-vscode"
+  ]
 }
