--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,4 @@
 {
-  "recommendations": [
-    "dbaeumer.vscode-eslint",
-    "Angular.ng-template",
-    "esbenp.prettier-vscode"
-  ]
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=827846
+  "recommendations": ["angular.ng-template", "dbaeumer.vscode-eslint", "esbenp.prettier-vscode"]
 }
