--- a/projects/ngx-annotate-text/tsconfig.lib.prod.json
+++ b/projects/ngx-annotate-text/tsconfig.lib.prod.json
@@ -3,7 +3,7 @@
   "extends": "./tsconfig.lib.json",
   "compilerOptions": {
     "declarationMap": false,
-    "stripInternal": true,
+    "stripInternal": true
   },
   "angularCompilerOptions": {
     "compilationMode": "partial"
