--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,13 +14,13 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18.x'
+          node-version: '22.x'
 
       - name: Install dependencies
         run: npm ci
 
       - name: Build
-        run: npm run build ngx-annotate-text '--configuration production'
+        run: npm run build:lib:prod
 
       - name: Lint
         run: npm run lint ngx-annotate-text
@@ -29,4 +29,4 @@ jobs:
         run: npm run test-headless ngx-annotate-text
       
       - name: Build Angular demo app
-        run: npm run build --omit=dev
+        run: npm run build
