--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,13 +12,13 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20.x'
+          node-version: '22.x'
 
       - name: Install dependencies
         run: npm ci
         
       - name: Build
-        run: npm run build ngx-annotate-text '--configuration production'
+        run: npm run build:lib:prod
 
       - name: Lint
         run: npm run lint ngx-annotate-text
