--- a/projects/ngx-annotate-text/tsconfig.spec.json
+++ b/projects/ngx-annotate-text/tsconfig.spec.json
@@ -6,5 +6,5 @@
     "outDir": "../../out-tsc/spec",
     "types": ["jasmine"]
   },
-  "include": ["**/*.spec.ts", "**/*.d.ts"]
+  "include": ["src/**/*.ts"]
 }
